--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,5 +3,8 @@
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
 
     </style>
-
+    <style name="FullsCreen" parent="Theme.AppCompat.Light.DialogWhenLarge">
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowAnimationStyle">@style/Animation.AppCompat.Dialog</item>
+    </style>
 </resources>
