--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -76,6 +76,7 @@
                         android:orientation="vertical"
                         android:gravity="center">
                         <ImageButton
+                            android:id="@+id/QLyKhachHang"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/images"
